--- a/src/global.scss
+++ b/src/global.scss
@@ -11,9 +11,10 @@ body {
   border-radius: 3px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
   padding: 10px;
+  max-width: 400px;
 
   img {
-    max-width: 400px;
+    max-width: 100%;
   }
 }
 
